# sample-module

./: README.md  pyproject.toml
.github/workflows/: ci.yml
sample_module/: __init__.py  sample.py
tests/: test_sample.py
