[project]
name = "sample-module"
version = "0.1.0"
description = "sample module"
authors = [
    {name = "jeanmichel_nwsb"},
]
dependencies = []
requires-python = ">=3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test.cmd = "pytest -vv --cov=sample_module --cov-report term-missing --cov-report xml tests/"
test.env = {PYTHONPATH = "."}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
